chore: fix comment dark mode inversion

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -6,7 +6,12 @@
 
     &.invertable { filter: invert(0); }
   }
-  .reversible {
+  iframe {
+    filter: invert(1);
+
+    &.invertable { filter: invert(0); }
+  }
+  .emoji {
     filter: invert(1);
   }
 }
